Disallow rapid click handling in views and downgrade paper version for j17 support